Dokumentation: Google, Ausblick, CI, Sonderzeichen

--- a/documentation/first.tex
+++ b/documentation/first.tex
@@ -38,34 +38,34 @@
 
 
 \section{Ausgangssituation}
-In deutschen Großst"adten gibt es eine Vielzahl von M"oglichkeiten schnell von A nach B zu kommen. Dies ist vor allem der außerordentlichen Verkehrsinfrastruktur zu verdanken. Jedem B"urger ist die Wahl selbst "uberlassen, ob er mittels eines Privat-PKW’s, mit den "offentlichen Verkehrsmitteln oder zum Beispiel mit dem Fahrrad seinen Bestimmungsort erreichen m"ochte. Doch in Großst"adten, wie zum Beispiel Berlin, kann dieses "Uberangebot an Transportm"oglichkeiten oft auf Situationen stoßen, in denen sich der/die Zielsuchende nicht sicher ist, welche Transportm"oglichkeit die beste für ihn oder sie ist. Hier spielen Faktoren wie die innerstädtische Verkehrssituation, Verfügbarkeit von Car-Sharing Autos in der Nähe, Straßensperrungen oder Preise für die "offentlichen Verkehrsmittel eine Rolle. All diese Möglichkeiten abzuwägen, um m"oglichst schnell und günstig einen Zielort zu erreichen kann unter Umständen ein zu großer Aufwand sein. \\
+In deutschen Gro"sst"adten gibt es eine Vielzahl von M"oglichkeiten schnell von A nach B zu kommen. Dies ist vor allem der au"serordentlichen Verkehrsinfrastruktur zu verdanken. Jedem B"urger ist die Wahl selbst "uberlassen, ob er mittels eines Privat-PKW’s, mit den "offentlichen Verkehrsmitteln oder zum Beispiel mit dem Fahrrad seinen Bestimmungsort erreichen m"ochte. Doch in Gro"sst"adten, wie zum Beispiel Berlin, kann dieses "Uberangebot an Transportm"oglichkeiten oft auf Situationen sto"sen, in denen sich der/die Zielsuchende nicht sicher ist, welche Transportm"oglichkeit die beste f"ur ihn oder sie ist. Hier spielen Faktoren wie die innerst"adtische Verkehrssituation, Verf"ugbarkeit von Car-Sharing Autos in der N"ahe, Stra"sensperrungen oder Preise f"ur die "offentlichen Verkehrsmittel eine Rolle. All diese M"oglichkeiten abzuw"agen, um m"oglichst schnell und g"unstig einen Zielort zu erreichen kann unter Umst"anden ein zu gro"ser Aufwand sein. \\
 
-Das Team AppCiMo m"ochte gerne etwas Licht in diesen Gro"sstadtdschungel bringen und verschiedene M"oglichkeiten f"ur den eigenen Personentransport in (Groß-)St"adten "ubersichtlich und ansprechend aufzeigen.
+Das Team AppCiMo m"ochte gerne etwas Licht in diesen Gro"sstadtdschungel bringen und verschiedene M"oglichkeiten f"ur den eigenen Personentransport in (Gro"s-)St"adten "ubersichtlich und ansprechend aufzeigen.
 
 
 
 \section{Zielsetzung}
 Ziel des Projektes ist die Planung und Entwicklung eines City-Movement-Prototypen in Form einer One-Page Webapplikation. Diese Webapplikation soll Nutzern als Entscheidungshilfe f"ur ihre Weg-Zielerreichung in deutschen Gro"sst"adten dienen. \\
 
-Den Nutzern sollen ausgehend von Start- und Bestimmungsort, drei unterschiedliche Transportm"oglichkeiten f"ur ihre Zielerreichung aufgezeigt werden. Diese M"oglichkeiten umfassen Carsharing-Angebote in der N"ahe, "offentliche Verkehrsmittel und das eigene Fahrrad. Zus"atzlich sollen für eine sofortige Einsch"atzung der ermittelten Transportm"oglichkeiten jeweils die Distanz, die voraussichtlich ben"otigte Zeit und die Kosten dargestellt werden. \\
+Den Nutzern sollen ausgehend von Start- und Bestimmungsort, drei unterschiedliche Transportm"oglichkeiten f"ur ihre Zielerreichung aufgezeigt werden. Diese M"oglichkeiten umfassen Carsharing-Angebote in der N"ahe, "offentliche Verkehrsmittel und das eigene Fahrrad. Zus"atzlich sollen f"ur eine sofortige Einsch"atzung der ermittelten Transportm"oglichkeiten jeweils die Distanz, die voraussichtlich ben"otigte Zeit und die Kosten dargestellt werden. \\
 
 \textbf{Features:}
 \begin{itemize}
 \item Mindestens drei verschiedene Transportm"oglichkeiten um das Ziel zu erreichen\\
 \item Kurzansichten und detaillierte Ansichten\\
-\item Preisermittlung f"ur jede Transportmöglichkeit\\
+\item Preisermittlung f"ur jede Transportm"oglichkeit\\
 \item Kartenvorschau in GoogleMaps\\
 \item Wegbeschreibung zu dem Ziel\\
 
 
 \end{itemize}
 
-Bei Appcimo handelt es sich um eine browserbasierte Webapplikation, d.h. für die Nutzung ist eine Internetverbindung notwendig. Außerdem ist eine automatische Standorterfassung von Vorteil.
-Diese Webapplikation soll auf den gängigen Browsern stabil laufen.
+Bei Appcimo handelt es sich um eine browserbasierte Webapplikation, d.h. f"ur die Nutzung ist eine Internetverbindung notwendig. Au"serdem ist eine automatische Standorterfassung von Vorteil.
+Diese Webapplikation soll auf den g"angigen Browsern stabil laufen.
 
 
 \chapter{Projektvorbereitung}
-F"ur die Planung, Organisation, Aufteilung und Verfolgung des Projekts wird die Projekt Management Plattform \textbf{Taiga.io} verwendet. Taiga.io ist ein webbasiertes open-source Projekt-Management-Tool für agile Entwickler, Designer und Projektmanager. Die St"arken liegen vor allem in den individuellen Anpassungsm"oglichkeiten, sowie in der einfachen und intuitiven Bedienung. Es wird von Start-Ups bevorzugt verwendet.
+F"ur die Planung, Organisation, Aufteilung und Verfolgung des Projekts wird die Projekt Management Plattform \textbf{Taiga.io} verwendet. Taiga.io ist ein webbasiertes open-source Projekt-Management-Tool f"ur agile Entwickler, Designer und Projektmanager. Die St"arken liegen vor allem in den individuellen Anpassungsm"oglichkeiten, sowie in der einfachen und intuitiven Bedienung. Es wird von Start-Ups bevorzugt verwendet.
 
 
 \section{Projektmanagementsoftware Taiga.io}
@@ -110,17 +110,17 @@ Somit gibt es im Projektteam keine festen Rollen wie Product Owner, Entwickler u
 
 Product Backlog: Darin sind die Anforderungen an die Webapplikation in Form eines vorl"aufigen Plans erfasst - dieser ist dynamisch und wird kontinuierlich weiterentwickelt. \\
 
-Sprint Backlog: Basierend auf dem Product Backlog werden hier die im jeweiligen Sprint zu erledigenden Aufgaben für alle Projektbeteiligten einsehbar hinterlegt.\\
+Sprint Backlog: Basierend auf dem Product Backlog werden hier die im jeweiligen Sprint zu erledigenden Aufgaben f"ur alle Projektbeteiligten einsehbar hinterlegt.\\
 
 Product Increment: Das Produkt-Inkrement ist das erledigte Arbeitspaket, welches nach Ende eines Sprints als fertiges Teilprodukt geliefert wird.\\
 
 
 
-\textbf{Die Scrum-Aktivitäten}\\
+\textbf{Die Scrum-Aktivit"aten}\\
 
-Sprint Planning: F"ur jeden Sprint muss geplant werden, welches neue Feature während eines Sprints realisiert werden kann.\\
+Sprint Planning: F"ur jeden Sprint muss geplant werden, welches neue Feature w"ahrend eines Sprints realisiert werden kann.\\
 
-Daily Scrum: Der ‘Daily Scrum‘ wird in einer abgewandelten Variante in Form eines ‘Weekly Scrum’ realisiert. Das Ziel hier ist prim"ar der Austausch untereinander im Projektteam bzgl. Probleme, Ideen, Lösungen und Entscheidungen.\\
+Daily Scrum: Der ‘Daily Scrum‘ wird in einer abgewandelten Variante in Form eines ‘Weekly Scrum’ realisiert. Das Ziel hier ist prim"ar der Austausch untereinander im Projektteam bzgl. Probleme, Ideen, L"osungen und Entscheidungen.\\
 
 Sprint Review: Eine nachtr"agliche Bewertung der zu umsetzenden Features, ob  das im Sprint Backlog formulierte Entwicklungsziel aus Sicht des Projektteams zu 100 Prozent erreicht wurde.\\
 
@@ -131,13 +131,13 @@ Product Backlog Refinement: Im Projektteam wird untersucht, inwieweit der im Pro
 
 \subsection{Auswahl Taiga.io}
 
-F"ur das Projektmanagement ist es wichtig eine geeignete Projektmanagementsoftware zu finden, die sich an die Bedürfnisse
-des Softwareprojektes anpassen lässt. Nach Recherchen und Austausch zwischen Kommolitonen und Arbeitskollegen wurde uns Taiga.io empfohlen. Taiga.io ist eine webbasierte Projektmanagement-Software mit der eine Projektdurchführung mit Scrum
-erm"oglicht. Integration mit Github ist ebenso möglich, wie die Einrichtung von Plugins, z.B. Chat-Programmen, wie HipChat und Slack.
+F"ur das Projektmanagement ist es wichtig eine geeignete Projektmanagementsoftware zu finden, die sich an die Bed"urfnisse
+des Softwareprojektes anpassen l"asst. Nach Recherchen und Austausch zwischen Kommolitonen und Arbeitskollegen wurde uns Taiga.io empfohlen. Taiga.io ist eine webbasierte Projektmanagement-Software mit der eine Projektdurchf"uhrung mit Scrum
+erm"oglicht. Integration mit Github ist ebenso m"oglich, wie die Einrichtung von Plugins, z.B. Chat-Programmen, wie HipChat und Slack.
 
 \subsection{Einrichtung des Projektteams}
 
-Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine Dashboard, worüber die Projekte verwalten werden und die aktuellen Information eingesehen werden können.\newline
+Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine Dashboard, wor"uber die Projekte verwalten werden und die aktuellen Information eingesehen werden k"onnen.\newline
 
 \begin{figure} [H]
 \begin{center}
@@ -161,11 +161,11 @@ Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine 
 \end{center}
 \end{figure}
 
-Wir haben uns entschieden, dass alle Projektbeteiligten die Rolle Product Owner zugewiesen bekommen, da eine strikte Durchf"uhrung von Scrum nicht möglich war.
+Wir haben uns entschieden, dass alle Projektbeteiligten die Rolle Product Owner zugewiesen bekommen, da eine strikte Durchf"uhrung von Scrum nicht m"oglich war.
 
 \subsection{Integration HipChat}
 
-Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns f"ur eine Chat-L"osung die sowohl als Windows-Applikation als auch als Smartphone-App verfügbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Altlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird "uber s"amtliche Aktiviat"aten im HipChat benachrichtigt.
+Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns f"ur eine Chat-L"osung die sowohl als Windows-Applikation als auch als Smartphone-App verf"ugbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Altlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird "uber s"amtliche Aktiviat"aten im HipChat benachrichtigt.
 
 \begin{figure} [H]
 \begin{center}
@@ -176,8 +176,8 @@ Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns f"ur e
 \end{center}
 \end{figure}
 
-Zus"atzlich integrierten wir Github in den HipChat, um Aktivitäten im GitHub als Information in den HipChat zu bringen.
-Dies ist nützlich, um "uber Commits oder Pushes im GitHub und "uber den aktualisierten Head benachrichtigt zu werden.
+Zus"atzlich integrierten wir Github in den HipChat, um Aktivit"aten im GitHub als Information in den HipChat zu bringen.
+Dies ist n"utzlich, um "uber Commits oder Pushes im GitHub und "uber den aktualisierten Head benachrichtigt zu werden.
 
 \begin{figure} [H]
 \begin{center}
@@ -208,7 +208,7 @@ Die definierten User-Stories f"uer das Projekt sind unter dem Punkt 3.1.4 als St
 
 \subsection{Definition von Tasks}
 
-Die Tasks zu den User-Story werden im Sprinttaskboard erstellt und k"onnen via Drag \& Drop den Spalten "`New"', "`In Progress"', "`Ready for Test"', "`Closed"' oder "`Need Information"' zugewiesen werden. Somit ist eine Übersicht des Sprint im allgemeinen und des Fortschritt der Tasks ersichtlich.
+Die Tasks zu den User-Story werden im Sprinttaskboard erstellt und k"onnen via Drag \& Drop den Spalten "`New"', "`In Progress"', "`Ready for Test"', "`Closed"' oder "`Need Information"' zugewiesen werden. Somit ist eine "Ubersicht des Sprint im allgemeinen und des Fortschritt der Tasks ersichtlich.
 
 \begin{figure} [H]
 \begin{center}
@@ -267,28 +267,28 @@ FU01 &	Das System muss f"ahig sein JSON-Objekte aus den Anfragen an die Google A
 FU02 &	Sobald der Benutzer eine Verbindung sucht, muss das System dem Benutzer die M"oglichkeit bieten einen Start- und Zielort einzugeben.\\
 
 \hline
-FU03& Sobald der Benutzer den Start- und Zielort eingibt, muss das System die Möglichkeit bieten, dem Benutzer eine Vorschlagsliste während der Eingabe anzuzeigen.\\
+FU03& Sobald der Benutzer den Start- und Zielort eingibt, muss das System die M"oglichkeit bieten, dem Benutzer eine Vorschlagsliste w"ahrend der Eingabe anzuzeigen.\\
 
 \hline
 FU03.01	&Die Vorschlagsliste muss bei der Eingabe des ersten Zeichens angezeigt werden.\\
 
 \hline
-FU03.02	&Die vorgeschlagenen Tupel sollen mit folgender Reihenfolge angezeigt werden, 1. Straße, 2. Ort, 3. Postleitzahl\\
+FU03.02	&Die vorgeschlagenen Tupel sollen mit folgender Reihenfolge angezeigt werden, 1. Stra"se, 2. Ort, 3. Postleitzahl\\
 
 \hline
-FU04	&Sobald der Benutzer Start und Zielort eigegeben hat, muss das System die Möglichkeit bieten, die gesuchte Verbindung mit unterschiedlichen Transportmitteln anzuzeigen.\\
+FU04	&Sobald der Benutzer Start und Zielort eigegeben hat, muss das System die M"oglichkeit bieten, die gesuchte Verbindung mit unterschiedlichen Transportmitteln anzuzeigen.\\
 
 \hline
-FU04.01	&Das Transportmittel „zu Fuß“ muss auswählbar sein.\\
+FU04.01	&Das Transportmittel „zu Fu"s“ muss ausw"ahlbar sein.\\
 
 \hline
-FU04.02&	Das Transportmittel  „Auto“ muss auswählbar sein.\\
+FU04.02&	Das Transportmittel  „Auto“ muss ausw"ahlbar sein.\\
 
 \hline
-FU04.03	&Das Transportmittel „öffentliche Verkehrsmittel“ muss auswählbar sein.\\
+FU04.03	&Das Transportmittel „"offentliche Verkehrsmittel“ muss ausw"ahlbar sein.\\
 
 \hline
-FU05	&Falls der Benutzer die Suchanfrage ändert, muss das System die Möglichkeit bieten, die gesuchte Verbindung und die Karte zu aktualisieren.\\
+FU05	&Falls der Benutzer die Suchanfrage "andert, muss das System die M"oglichkeit bieten, die gesuchte Verbindung und die Karte zu aktualisieren.\\
 
 \hline
 FU05.01	&Die Vorschlagsliste muss bei Neueingabe des Start- und Zielorts angezeigt werden.\\
@@ -306,10 +306,10 @@ FU05.04&	Die Dauer der neuen Verbindung muss aktualisiert werden.\\
 FU05.05	&Der Preis der neuen Verbindung muss angezeigt werden.\\
 
 \hline
-FU06	&Falls der Benutzer eine Verbindung sucht, muss das System die Möglichkeit bieten, mehrere Transportmittel auszuwählen.\\
+FU06	&Falls der Benutzer eine Verbindung sucht, muss das System die M"oglichkeit bieten, mehrere Transportmittel auszuw"ahlen.\\
 
 \hline
-FU07	&Sobald der Benutzer eine Verbindung sucht, muss das System die Möglichkeit bieten, eine Ergebnisliste der gesuchten Verbindung anzuzeigen.\\
+FU07	&Sobald der Benutzer eine Verbindung sucht, muss das System die M"oglichkeit bieten, eine Ergebnisliste der gesuchten Verbindung anzuzeigen.\\
 
 \hline
 FU07.01&	In der Ergebnisliste muss der aktuelle Preis angezeigt werden.\\
@@ -347,7 +347,7 @@ FU07.03&	In der Ergebnisliste muss die Distanz angezeigt werden.\\
 Nr.	& Beschreibung\\
 
 \hline
-NFU01 &	Das System muss plattformunabhängig und webbasiert sein. \\
+NFU01 &	Das System muss plattformunabh"angig und webbasiert sein. \\
 
 \hline
 NFU02 &	Das System muss mit einem Entwicklungs-Framework umgesetzt werden.\\
@@ -359,7 +359,7 @@ NFU03 &	Das System soll als Single-Page Anwendung umgesetzt werden.\\
 NFU04 &	Das System soll gestestet werden.\\
 
 \hline
-NFU05 &	Das System soll über ein Deployment verf"ugen.\\
+NFU05 &	Das System soll "uber ein Deployment verf"ugen.\\
 
 \hline
 NFU06 &	F"ur Das System soll Continious Integration implementiert werden.\\
@@ -388,16 +388,16 @@ NFU06 &	F"ur Das System soll Continious Integration implementiert werden.\\
 Nr. &	Beschreibung\\
 
 \hline
-PRJ01 &	Für die Umsetzung des Systems soll ein modernes Entwicklungs-Framework für die Softwareerstellung genutzt werden.\\
+PRJ01 &	F"ur die Umsetzung des Systems soll ein modernes Entwicklungs-Framework f"ur die Softwareerstellung genutzt werden.\\
 
 \hline
-PRJ02 &	Es muss eine Projektmanagementsoftware, für die mit der Softwareerstellung einhergehende Projektarbeit, genutzt werden.\\
+PRJ02 &	Es muss eine Projektmanagementsoftware, f"ur die mit der Softwareerstellung einhergehende Projektarbeit, genutzt werden.\\
 
 \hline
 PRJ03 &	Der entwickelte Programmcode muss auf Github als Master-Branch hochgeladen werden.\\
 
 \hline
-PRJ04 &	Für das Software-Projekt muss eine Projektdokumentation erstellt werden.\\
+PRJ04 &	F"ur das Software-Projekt muss eine Projektdokumentation erstellt werden.\\
 
 \hline
 \end{tabular}
@@ -514,7 +514,7 @@ Task \#32 & Aktualisierung der Wegbeschreibung bei "Anderung implementieren\\
 Task \#14 & Google map f"ur Autofahrt implementieren\\
 
 \hline
-Task \#15 & Google Map für Fahrt mit "offentlichen Verkehrsmitteln implementieren\\
+Task \#15 & Google Map f"ur Fahrt mit "offentlichen Verkehrsmitteln implementieren\\
 
 \hline
 Task \#16 & Google Map f"ur Fahrradfahrt implementieren\\
@@ -764,7 +764,8 @@ Die Packages und Module werden "uber die offizielle npm Seite www.npmjs.com/ zum
 
 Mittels des Package-Managers lassen sich die f"ur das eigene Programm verwendeten Packages leicht verwalten und auch updaten. \\
 
-\textbf{F"ur die Webapplikation Appcimo werden folgende npm Packages installiert.} \\
+
+Durch die Verwendung des Webpack Templates werden eine Vielzahl an Tools und Modulen f"ur die Webseitenerstellung bereitgestellt. Neben dieser Grundinstallation wurden folgende npm Packages nachtr"aglich installiert:
 
 \begin{figure} [H]
 \begin{center}
@@ -900,7 +901,30 @@ Ein weiteres Feature von CircleCI ist die Koppelung des CircleCI-Accounts mit ei
 \section{Google}
 
 \subsection{Google Services}
+F"ur die Einbindung von Google-Services wie die Ermittlung von Positionsdaten, GoogleMaps und Routenberechnungen wird die Einbindung einer Google-API mit g"ultigem Key in die Applikation vorausgesetzt. \\
 
+Die Beantragung eines Keys erfolgt "uber den Google API Manager. Voraussetzung hierf"ur ist ein Google-Konto.\\
+
+Folgende Google-Services werden f"ur Appcimo ben"otigt.
+
+\begin{figure} [H]
+\begin{center}
+\includegraphics[scale=1]{google1.png}
+\caption{Google API's}
+\label{googleapi}
+\end{center}
+\end{figure}
+
+Google stellt daf"ur ein Tageskontingent von 1.000 kostenlosen Anfragen an die Places Library pro Tag zur Verf"ugung.\\
+Die "Uberwachung der API-Nutzung, eventuelle Latenzen und "Ubertragungsfehler lassen sich auch im Google-API Dashboard aufrufen.
+
+\begin{figure} [H]
+\begin{center}
+\includegraphics[scale=1]{google2.png}
+\caption{Google API Dashboard}
+\label{googledashboard}
+\end{center}
+\end{figure}
 
 
 \chapter{Systementwurf und Umsetzung}
@@ -908,8 +932,30 @@ Ein weiteres Feature von CircleCI ist die Koppelung des CircleCI-Accounts mit ei
 \section{Architektur}
 
 \subsection{Systemarchitektur}
+Die Entwicklung der Webapplikation richtet sich entsprechend VueJS nach der MVVM Model-View-ViewModel Architektur. \\
+Um diese simple Architektur auf die Applikation anzuwenden, wird das Komponentendiagramm abstrakt genutzt. Das folgende Diagramm veranschaulicht, dass das View- und Viewmodell-Layer in der VueJS-Applikation selbst zu finden ist. In den einzelnen Vue-Komponenten sind sowohl die View, als auch die Steuerung und die Business Logic implementiert. \\
+
+Das Backend/ Modell wird hierbei durch die Google-API und die Car2go-API (Car2go-API wird momentan nur simuliert) abgebildet. In ihnen werden die Routenberechnungen durchgef"uhrt und an das ViewModell zur"uckgegeben. Im ViewModell werden diese Routen dann weiter f"ur die View aufgearbeitet.\\
+
+\begin{figure} [H]
+\begin{center}
+\includegraphics[scale=1]{mvvmappcimo.png}
+\caption{MVVM Appcimo}
+\label{MVVMAppcimo}
+\end{center}
+\end{figure}
 
 \subsection{Komponentendiagramm}
+Im Komponentendiagramm sind die einzelnen Vue-Komponenten sowie ihre Zugriffe untereinander abgebildet. Das Interface der Komponente stellen hierbei die „Properties“ von diesen dar. Durch Properties, und nur durch diese, k"onnen Daten in der Applikation von einer Komponente zur n"achsten gereicht werden.
+
+
+\begin{figure} [H]
+\begin{center}
+\includegraphics[scale=1]{komponentendiagramm.png}
+\caption{Komponentendiagramm}
+\label{Komponentendiagramm}
+\end{center}
+\end{figure}
 
 
 \subsection{Komponentenbeschreibung}
@@ -1081,19 +1127,55 @@ Die GoogleMap wird in dieser Komponente dargestellt.\\
 
 
 \subsection{Sequenzdiagramm}
+Das Sequenzdiagramm stellt einen einfachen schematischen Ablauf der Routensuche dar. Die Funktionen sind nicht deckungsgleich zu den Funktionen der Komponenten benannt, da diese teils sehr verschachtelt sind und nicht zum einfachen Verst"andnis des Prozesses beitragen w"urden.\\
+
+Vielmehr k"onnen die hier verwendeten Funktionsnamen als Funktionsbox gesehen werden, die alle Javascript-Funktionen beinhalten, die zur Realisierung des beabsichtigten R"uckgabewertes dienen.
+
+\begin{figure} [H]
+\begin{center}
+\includegraphics[scale=1]{sequenzdiagramm.png}
+\caption{Sequenzdiagramm}
+\label{Sequenzdiagramm}
+\end{center}
+\end{figure}
 
 \section{Qualit"atsmanagement}
 
 \subsection{Refactoring}
+Um einen wartbaren Code zu schaffen, wurde regelm"a"sig ein Code-Refactoring betrieben. 
+Als Beispiel dient hier der erste Prototyp. Er funktionierte als Feldtest, war aber nur sehr schwer testbar und deshalb qualitativ nicht gut genug. Daraufhin wurden zwei gro"se Refactoring-Iterationen durchgef"uhrt, um wart- und testbaren Code zu erhalten.
+
 
 \subsection{Unit Tests}
+Unit-Tests sind bei dem Programm ein wichtiger Bestandteil um die gew"unschten Kernfunktionen der Applikation zu erhalten. Ein Refactoring sollte hierbei die Business Logic des Programms nicht negativ beeintr"achtigen.\\
+
+Deshalb wurden entsprechende Unit Tests f"ur die Kernfunktionen der Applikation implementiert.
 
 \subsection{Build-Management}
+VueJS Applikationen sind in ihrem Entwicklungszustand nicht im Browser lauff"ahig. Sie m"ussen einem Build-Prozess unterzogen werden, bei dem die Vue-Dateien in HTML-, CSS- und Javascript-Dateien "ubersetzt werden.\\
+
+Dies wird bei der Applikation Appcimo durch NodeJS und den entsprechenden npm Skripten gel"ost. Der Build-Prozess wird in der Build-Konfigurationsdatei „build.js“ definiert. Diese basiert auf weiteren Konfigurationsdateien. \\
+Der Aufruf des Build-Prozesses wird durch npm scripts ausgel"ost. Diese sind wiederum in einer Konfigurationsdatei „package.json“ definiert. Hier werden die St"arken des einheitlichen JSON-Format genutzt. Es ist durch seinen strukturierten Aufbau f"ur viele Applikationen gut nutzbar.\\
+
+Die in der package.json hinterlegten Ziele starten z.B. die build.js-Datei und k"onnen auf eventuelle Abh"angigkeiten verweisen. So ist es zum Beispiel m"oglich, die unit tests als Pre-Build Prozess zu konfigurieren (wie man es als Dependencies aus z.B. Ant kennt). Hierbei wird der Build erst ausgef"uhrt wenn das Testskript eine positive R"uckmeldung gibt.
 
 \subsection{Continuous Integration}
+Das Prinzip der Continuous Integration steuert einen gro"sen Teil zur Qualit"at der Software bei. Hier wird das Online-Tool „CircleCI“ genutzt, da es in Github integrierbar ist und die Build-Konfigurationen aus den package.json Konfigurationsdateien auslesen kann.\\
+
+Wenn ein git-push zu dem Github-Repository durchgef"uhrt wird, startet CircleCI den Continuous Integration Prozess.\\
+
+Zun"achst wird die Build-Umgebung abh"angig der package.json Konfiguration-Datei hergestellt. Danach erfolgt der Test und Build der Software. Hier werden die definierten npm Skripte ausgef"uhrt. Im Fall von Appcimo wird zun"achst der Test und abh"angig davon der Build ausgef"uhrt. Sind der Test und der Build erfolgreich, wird der definierte Deploy Prozess zu Amazon S3 durchgef"uhrt. Ist der Test hingegen nicht erfolgreich werden die App-Owner dar"uber benachrichtigt und der fehlerhafte Code wird nicht zur Live-Umgebung "ubertragen.
 
 
 \chapter{Zusammenfassung und Ausblick}
+Mit Abschluss des Semester-Projektes „Appcimo“ f"ur das Modul Softwaretechnik-Projekt wurde ein funktionierender und stabil-laufende Prototyp entwickelt. Durch die erstellten Testf"alle wird die korrekte Ausf"uhrung der Applikation sichergestellt. Die Einbindung der Continuous Integration Platform CircleCI erm"oglicht das Ausf"uhren und "Uberwachen des Software-Builds inklusive der Tests und erm"oglicht, das Programm auf einem Amazon AWS Server zu hosten. Der Software-Prototyp enth"alt die zuvor im Team abgestimmten Features.\\
+F"ur die Zukunft ist jedoch noch eine Weiterentwicklung des Programms geplant. Unter anderem sollen weitere Carsharing-Anbieter als Transportm"oglichkeit integriert werden. Auch die Routenanfrage der "offentlichen Verkehrsmittel soll erweitert werden, eine detaillierte Auswahl an Fahrzeugtypen anbieten k"onnen (Ubahn, Sbahn, Tram, Bus, Regionalbahn) und Preise exakt berechnen k"onnen. \\
+
+Das Template der Wegbeschreibung wird momentan von Google gestellt. Da alle Informationen des Weges als Objekt geliefert werden, ist es jedoch m"oglich eine individuelle, stilistisch auf das Programm abgestimmte Wegbeschreibung zu erstellen. \\
+
+Zur Positionsermittlung wird momentan die Startadresse abgefragt und ausgewertet. Es soll zuk"unftig - bei Einwilligung - eine automatische Standorterfassung erfolgen, die die Koordinaten der Person als Startadresse verwendet, um noch schneller, flexibler und genauer Routen abzufragen.\\
+
+Der Grundstein f"ur eine sinnvolle und innovative Webapplikation ist gelegt. Mit den festgelegten Ma"snahmen f"ur die Zukunft soll die Applikation ein gro"ses Publikum ansprechen und den besten Service f"ur die Zielerreichung in Gro"sst"adten liefern.\\
 
 
 \chapter{Anh"ange}
