--- a/documentation/first.tex
+++ b/documentation/first.tex
@@ -934,9 +934,8 @@ Ein weiteres Feature von CircleCI ist die Koppelung des CircleCI-Accounts mit ei
 \textbf{Link zur Applikation: } http://appcimo.s3-website-eu-west-1.amazonaws.com/
 
 
-\section{Google}
+\section{Google Services}
 
-\subsection{Google Services}
 F"ur die Einbindung von Google-Services wie die Ermittlung von Positionsdaten, GoogleMaps und Routenberechnungen wird die Einbindung einer Google-API mit g"ultigem Key in die Applikation vorausgesetzt. \\
 
 Die Beantragung eines Keys erfolgt "uber den Google API Manager. Voraussetzung hierf"ur ist ein Google-Konto.\\
